[project]
name = "pac-man"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mazegenerator",
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "raylib>=5.5.0.4",
]

[tool.uv.sources]
mazegenerator = { path = "mazegenerator-2.0.1-py3-none-any.whl" }
